[gd_scene load_steps=8 format=2]

[ext_resource path="res://GFX/Interface/Fonts/kenvector_future.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Interface/Theme.tres" type="Theme" id=2]
[ext_resource path="res://GFX/Interface/PNG/metalPanel_red.png" type="Texture" id=3]
[ext_resource path="res://Levels/Lobby.gd" type="Script" id=4]
[ext_resource path="res://SFX/Music/StealthintheWoods.ogg" type="AudioStream" id=5]
[ext_resource path="res://GFX/Interface/PNG/glassPanel.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 6 )
patch_margin_left = 20
patch_margin_top = 20
patch_margin_right = 20
patch_margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.71167
margin_top = 8.67645
margin_right = 3.71167
margin_bottom = 8.67645
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer"]
margin_left = 312.0
margin_top = 100.0
margin_right = 712.0
margin_bottom = 500.0
rect_min_size = Vector2( 400, 400 )
texture = ExtResource( 3 )
patch_margin_left = 20
patch_margin_top = 40
patch_margin_right = 20
patch_margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/NinePatchRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 30.0
margin_right = -12.0
margin_bottom = -12.0
custom_constants/separation = 26
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_right = 376.0
margin_bottom = 27.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Welcome to "
align = 1

[node name="Label2" type="Label" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 53.0
margin_right = 376.0
margin_bottom = 146.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Heist
masters"
align = 1

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/NinePatchRect/VBoxContainer"]
margin_top = 172.0
margin_right = 376.0
margin_bottom = 276.0

[node name="GridContainer" type="GridContainer" parent="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer"]
margin_left = 56.0
margin_right = 320.0
margin_bottom = 104.0
columns = 2

[node name="Start" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )

[node name="Label" type="Label" parent="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 36.0
margin_top = 2.0
margin_right = 264.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "start mission"

[node name="Tutorial" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )

[node name="Label2" type="Label" parent="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 36.0
margin_top = 38.0
margin_right = 264.0
margin_bottom = 65.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Training"

[node name="Quit" type="Button" parent="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )

[node name="Label3" type="Label" parent="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/GridContainer"]
margin_left = 36.0
margin_top = 74.0
margin_right = 264.0
margin_bottom = 101.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "quit game"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
autoplay = true
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/GridContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/GridContainer/Tutorial" to="." method="_on_Tutorial_pressed"]
[connection signal="pressed" from="CenterContainer/NinePatchRect/VBoxContainer/CenterContainer/GridContainer/Quit" to="." method="_on_Quit_pressed"]
